--- a/assets/style.css
+++ b/assets/style.css
@@ -3,3 +3,30 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container-fluid {
+    background-image: url(./img/trenit.jpeg);
+}
+
+.priceCalc{
+    background-color: white;
+}
+
+.input{
+    border-radius: 1rem;
+    border: 1px solid rgb(206, 34, 34);
+    height: 30px;
+    margin: 4px;
+    padding: 4px;
+}
+
+.primary_btn{
+    background-color: rgb(206, 34, 34);
+    color: white;
+}
+
+.secondary_btn{
+    background-color: white;
+    color: rgb(206, 34, 34);
+    border-color: rgb(206, 34, 34);
+}
