--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@ h3{
     border: 1px solid rgb(206, 34, 34);
     height: 30px;
     margin: 4px;
-    padding: 4px;
+    padding: 0 8px;
 }
 
 .primary_btn{
